--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -509,7 +509,7 @@ a:hover
     width: 100%;
     height: 100%;
 
-    background: url(../img/background.jpg);
+    background: url(../img/leaf.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -574,10 +574,9 @@ a:hover
             transform: translate(-50%,-50%);
     text-align: center;
 
-    opacity: 0;
+    
     border: 5px solid #fff;
-    background: red;
-    background-image: url(../img/card-background.jpg);
+    background-image: url(../img/leaf.jpg);
     background-position: center;
     background-size: cover;
 }
