--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -509,7 +509,7 @@ a:hover
     width: 100%;
     height: 100%;
 
-    background: url(../img/leaf.jpg);
+    background: url(../img/Leaf.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -576,7 +576,7 @@ a:hover
 
     
     border: 5px solid #fff;
-    background-image: url(../img/leaf.jpg);
+    background-image: url(../img/Leaf.jpg);
     background-position: center;
     background-size: cover;
 }
