--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -509,7 +509,7 @@ a:hover
     width: 100%;
     height: 100%;
 
-    background: url("../img/Leaf.jpg");
+    background: url(../img/leaf.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -577,7 +577,7 @@ a:hover
     
     border: 5px solid #fff;
     opacity: 0.7;
-    background-image: url("../img/Leaf.jpg");
+    background-image: url(../img/leaf.jpg);
     background-position: center;
     background-size: cover;
 }
