--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -509,7 +509,7 @@ a:hover
     width: 100%;
     height: 100%;
 
-    background-image: url(../img/card-background.jpg);
+    background-image: url(../img/leaf.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -576,8 +576,8 @@ a:hover
 
     
     border: 5px solid #fff;
-    opacity: 0.7;
-    background-image: url(../img/background.jpg);
+/*     opacity: 0.7; */
+    background-image: url(../img/leaf.jpg);
     background-position: center;
     background-size: cover;
 }
