--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -495,8 +495,8 @@ a:hover
     width: 100%;
     height: 100%;
 
-    opacity: .7;
-    background: #020026;
+/*     opacity: .7; */
+/*     background: #020026; */
 }
 
 .hero .background-content .background-img
