--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -485,7 +485,7 @@ a:hover
             transform: translate3d(-50%, -50%, 0px) !important;
 }
 
-.hero .background-content .background-overlay
+/* .hero .background-content .background-overlay
 {
     position: absolute;
     z-index: 50;
@@ -495,9 +495,9 @@ a:hover
     width: 100%;
     height: 100%;
 
-/*     opacity: .7; */
-/*     background: #020026; */
-}
+    opacity: .7;
+    background: #020026;
+} */
 
 .hero .background-content .background-img
 {
@@ -509,7 +509,7 @@ a:hover
     width: 100%;
     height: 100%;
 
-    background-image: url("../img/leaf.jpg");
+    background-image: url("assets/img/leaf.jpg");
     background-repeat: no-repeat;
     background-size: cover;
 }
