--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -509,7 +509,7 @@ a:hover {
     border: 5px solid #fff;
     background-color: #020026;
     /*opacity: 0.7;*/
-    background-image: url("assets/img/Leaf.jpg");
+    background-image: url("assets/img/card-background.jpg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
